--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,8 @@
     "mongodb": "^5.1.0",
     "morgan": "^1.9.1",
     "nodemon": "^2.0.2",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6",
     "uuid": "^9.0.0"
   }
 }
